infrastructure/configs/openweb/openweb-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openweb-ingress
  namespace: ownapps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
    - hosts:
        - smart.yuandrk.net
      secretName: ia-ingress-prod
  rules:
    - host: "smart.yuandrk.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  number: 80
